<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Recycler View Pets</string>
    <string name="pet_photo">Pet photo</string>
    <string name="pet_name">Pet name</string>
    <string name="age">%s years</string>
    <string name="a_year">1 year</string>
    <string name="favorite_pet">Favorite pet</string>
    <string name="rename_pet">Rename pet</string>
    <string name="delete_pet">Delete pet</string>
    <string name="delete_pet_title">Delete %s</string>
    <string name="delete_pet_message" tools:ignore="Typos">Oh no! Do you really wanna delete this fluffy thing %s?</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="no_pets">There are no pets</string>
    <string name="no_existing_pets">You have no pets at all</string>
    <string name="only">only</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="pets_amount">Pets amount</string>
</resources>