<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/favoritePetsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:backgroundTint="@color/teal_700"
        android:drawableEnd="@drawable/ic_star_fill"
        android:paddingHorizontal="10dp"
        android:text="@string/only"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sortByNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/teal_700"
        android:paddingHorizontal="10dp"
        android:text="@string/sort_by_name"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/favoritePetsButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sortByPetTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/sortByNameButton"
        app:layout_constraintStart_toEndOf="@id/sortByNameButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="favoritePetsButton,sortByNameButton, sortByPetTypeSpinner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoritePetsButton"
        tools:context=".views.pets.PetsActivity" />

    <TextView
        android:id="@+id/noPetsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/zilla_slab_semibold"
        android:text="@string/no_pets"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>